bugfix: missing retail product description display from frontend side

--- a/view/B/SG/retailProductDetails.html
+++ b/view/B/SG/retailProductDetails.html
@@ -21,7 +21,9 @@
                     //set retail product details
                     document.getElementById("productImg").setAttribute('src', product.imageURL);
 
-                    document.getElementById("productCategory").innerHTML = product.category;
+                    // Javier: fix for missing description display
+                    document.getElementById("productDesc").innerHTML = product.description;
+                    
                     document.getElementById("productCategory").setAttribute('href', '/B/' + countryPrefix
                         + '/retailProductsCategory.html?cat=' + encodeURIComponent(product.category));
 
