bugfix: missing description link on frontend side from the furnitureRetailProducts.html file

--- a/view/B/SG/furnitureProductDetails.html
+++ b/view/B/SG/furnitureProductDetails.html
@@ -28,7 +28,13 @@
                     }
                
                     document.getElementById("categoryLink").innerHTML = furniture.category;
+                    
+                    // Javier: fix for missing description display
+                    document.getElementById("description").innerHTML = furniture.description;
+
                     document.getElementById("categoryLink").setAttribute('href', '/B/' + countryPrefix
+
+                    
                         + '/furnitureCategory.html?cat=' + encodeURIComponent(furniture.category));
 
                     var selectOptions = '<option></option>';
